--- a/css/style.css
+++ b/css/style.css
@@ -25,116 +25,14 @@ footer{
 }
 
 .site-header{
+    z-index: 5;
     background-color:rgb(255, 208, 0);
     display: -webkit-flex;
     display: flex;
     justify-content: space-between;
     padding:60px,20px;
-    height: 100px;
+    height: 81px;
     width:100%;
-}
-
-.site-logo{
-  margin:20px;
-  height :50px;
-  width: auto;
-  font-family: 'Varela Round', sans-serif;
-  font-size: 50px;
-}
-
-.gnav-menu{
-    display:flex;
-    margin: 0px;
-}
-
-.gnav-menu-items{
-    margin-top:30px;
-    margin-left:20px;
-    margin-right: 30px;
-}
-
-ul{
-    list-style: none;
-    margin:auto,5px;
-}
-
-a{
-    text-decoration: none;
-}
-
-a:link, a:visited, a:hover, a:active {
-    color: black;
-  }
-
-p{
-    font-family: "M PLUS 1p";
-    font-size:15px;
-}
-main{
-    padding-top: 100px;
-    font-family: 'Varela Round', sans-serif;
-}
-
-.top{
-    background-color: rgb(31, 143, 255);
-    width:80%;
-    height:800px;
-    margin:0 auto;
-    text-align: center;
-    margin-top:-100px;
-    padding-top:100px;
-}
-
-.top-title{
-    font-size:100px;
-    color:#ffff;
-}
-
-.profile{
-    background-color: rgb(255, 255, 255);
-    width:80%;
-    height:800px;
-    margin:0 auto;
-
-}
-
-.profile-contents{
-    display: flex;
-    margin-right: 20%;
-    justify-content: center;
-}
-
-.profile-text{
-    width:500px;
-    margin-left:20px;
-}
-
-.portfolio{
-    background-color: rgb(253, 255, 117);
-    width:80%;
-    height:800px;
-    margin:0 auto;
-}
-
-.logo-img{
-    background-image: url(../images/logo.png);
-    width:  150px;
-    height: 150px;
-    border: 4px solid #000000;
-    border-radius: 50%;
-    margin-left:15%;
-    background-size: 200px 200px;
-    background-position: center center;
-}
-
-.bass-img{
-    width:60%;
-}
-
-.title{
-    text-align: center;
-    font-size:60px;
-    padding-top: 200px;
 }
 
 /*動くボタン*/
@@ -151,8 +49,7 @@ html {
   font-size: 62.5%;
 }
 
-
-
+/*動くボタン*/
 .btn,
 a.btn,
 button.btn {
@@ -207,4 +104,144 @@ a.btn-border-shadow:hover {
 a.btn-border-shadow:hover:before {
   top: 0;
   left: 0;
+}
+
+.site-logo{
+  margin:20px;
+  height :50px;
+  width: auto;
+  font-family: 'Varela Round', sans-serif;
+  font-size: 50px;
+}
+
+.gnav-menu{
+    display:flex;
+    margin: 0px;
+}
+
+.gnav-menu-items{
+    margin-top:30px;
+    margin-left:20px;
+    margin-right: 30px;
+}
+
+ul{
+    list-style: none;
+    margin:auto,5px;
+}
+
+a{
+    text-decoration: none;
+}
+
+a:link, a:visited, a:hover, a:active {
+    color: black;
+  }
+
+p{
+    font-family: "M PLUS 1p";
+    font-size:15px;
+}
+main{
+    padding-top: 100px;
+    font-family: 'Varela Round', sans-serif;
+}
+
+/*トップ*/
+.top{
+    background-color: rgb(31, 143, 255);
+    width:80%;
+    height:800px;
+    margin:0 auto;
+    text-align: center;
+    margin-top:-80px;
+    padding-top:80px;
+}
+
+.top-title{
+    font-size:100px;
+    color:#ffff;
+}
+
+.bass-img{
+    width:60%;
+}
+
+/*プロフィール*/
+.profile{
+    background-color: rgb(255, 255, 255);
+    width:80%;
+    height:800px;
+    margin:0 auto;
+
+}
+
+.profile-contents{
+    display: flex;
+    margin-right: 20%;
+    justify-content: center;
+}
+
+.profile-text{
+    width:500px;
+    margin-left:20px;
+}
+
+.logo-img{
+    background-image: url(../images/logo.png);
+    width:  100px;
+    height: 100px;
+    border: 4px solid #000000;
+    border-radius: 50%;
+    margin-left:15%;
+    background-size: 150% 150%;
+    background-position: center center;
+}
+/*ポートフォリオ*/
+.portfolio{
+    background-color: rgb(253, 255, 117);
+    width:80%;
+    height:800px;
+    margin:0 auto;
+}
+
+.protfolio-contents-upper,.protfolio-contents-under{
+    display: flex;
+    margin-left:2%;
+}
+
+.products-img{
+    width: 70%;
+    margin:4% 4%;
+    -webkit-transform: scale(1);
+    transform: scale(1);
+    -webkit-transition: .3s ease-in-out;
+    transition: .3s ease-in-out;
+}
+
+
+.products-img:hover{
+    -webkit-transform: scale(1.1);
+    transform: scale(1.15);
+  }
+
+.portfolio-text{
+    text-align: center;
+}
+
+.caption {
+	font-size: 130%;
+	text-align: center;
+    color:black;
+    padding-right: 20%;
+}
+
+.mask{
+    text-align: center;
+}
+
+.title{
+    text-align: center;
+    font-size:60px;
+    padding-top: 70px;
 }
