--- a/css/style.css
+++ b/css/style.css
@@ -18,7 +18,7 @@ header{
 }
 
 footer{
-    background-color: dodgerblue;
+    background-color: #1f8fff;
     width:100%;
     height:100px;
     text-align: center;
@@ -149,22 +149,30 @@ main{
 
 /*トップ*/
 .top{
-    background-color: rgb(31, 143, 255);
+    background-color: rgb(30, 143, 255);
     width:80%;
-    height:800px;
+    height:450px;
     margin:0 auto;
     text-align: center;
     margin-top:-80px;
     padding-top:80px;
 }
 
+.top-img{
+    width:100%;
+    text-align:center;
+    margin-left:auto;
+    margin-right:auto;
+}
 .top-title{
+    margin-top: 150px;
     font-size:100px;
     color:#ffff;
 }
 
+
 .bass-img{
-    width:60%;
+    width:80%;
 }
 
 /*プロフィール*/
@@ -178,7 +186,6 @@ main{
 
 .profile-contents{
     display: flex;
-    margin-right: 20%;
     justify-content: center;
 }
 
@@ -189,7 +196,7 @@ main{
 
 .logo-img{
     background-image: url(../images/logo.png);
-    width:  100px;
+    width:  auto;
     height: 100px;
     border: 4px solid #000000;
     border-radius: 50%;
@@ -207,11 +214,16 @@ main{
 
 .protfolio-contents-upper,.protfolio-contents-under{
     display: flex;
-    margin-left:2%;
+    margin:0 5%;
+}
+
+.product{
+    width:50%;
+    margin: 0 5%;
 }
 
 .products-img{
-    width: 70%;
+    width: 100%;
     margin:4% 4%;
     -webkit-transform: scale(1);
     transform: scale(1);
@@ -223,7 +235,7 @@ main{
 .products-img:hover{
     -webkit-transform: scale(1.1);
     transform: scale(1.15);
-  }
+}
 
 .portfolio-text{
     text-align: center;
@@ -233,7 +245,7 @@ main{
 	font-size: 130%;
 	text-align: center;
     color:black;
-    padding-right: 20%;
+
 }
 
 .mask{
@@ -245,3 +257,241 @@ main{
     font-size:60px;
     padding-top: 70px;
 }
+
+
+/* ボタン全体 */
+.flowbtn3{
+    font-family:'Comic Sans MS','Chalkboard SE',sans-serif;/* 好きなフォントに変えてね */
+    border-radius:50%;
+    position:relative;
+    display:inline-block;
+    width:70px;
+    height:70px;
+    font-size:30px;
+    color:#fff!important;
+    text-decoration:none;
+    transition:.5s;
+    }
+    .flowbtn3 i{
+    position:relative;
+    bottom:5px;
+    }
+    /* Twitter */
+    .fl_tw1{
+    background:#55acee;
+    }
+    /* 問い合わせ */
+    .fl_ma1{
+    background:#f3981d;	
+    }
+    /* Feedly */
+    .fl_fd1{
+    background:#6cc655;
+    }
+    /* Pocket */
+    .fl_pk1{
+    background:#ef3f56;
+    }
+    /* Facebook */
+    .fl_fb1{
+    background:#3b5998;
+    }
+    /* はてブ */
+    .fl_hb1{
+    background:#1ba5dc;
+    }
+    /* YouTube */
+    .fl_yu1{
+    background:#fc0d1c;
+    }
+    /* LINE@ */
+    .fl_li1{
+    background:#00c300;
+    }
+    /* Instagram紫グラデ背景 */
+    .insta_btn3{
+    background:-webkit-linear-gradient(135deg, #427eff 0%, #f13f79 70%) no-repeat;
+    background:linear-gradient(135deg, #427eff 0%, #f13f79 70%) no-repeat;
+    overflow:hidden;
+    }
+    /* ボタン内のテキスト */
+    .flowbtn3 div{
+    font-size:11px;	
+    font-weight:bold;
+    position:relative;
+    bottom:0px;
+    }
+    /* ulタグの内側余白を０にする */
+    ul.snsbtniti{
+    padding:0!important;
+    }
+    /* ボタン全体の位置 */
+    .snsbtniti{
+    position:fixed;
+    bottom: 12%; /* 基準の位置を画面の一番下に指定する */
+    right: 2%; 
+    flex-flow:row wrap;
+    justify-content:space-around;
+    }
+    /* ボタン同士の余白 */
+    .snsbtniti li{
+    flex:0 0 10%;
+    text-align:center!important;
+    }
+    /* ボタンにマウスホバー時 */
+    .flowbtn3:hover{
+    -webkit-transform:translateY(-5px);
+    -ms-transform:translateY(-5px);
+    transform:translateY(-5px);
+    text-decoration:none;
+    }
+
+
+    /*メールフォーム*/
+
+    .Form {
+        background-color: #ffffff;
+        margin-top: 80px;
+        margin-left: auto;
+        margin-right: auto;
+        margin-bottom:5%;
+        max-width: 720px;
+      }
+      @media screen and (max-width: 480px) {
+        .Form {
+          margin-top: 40px;
+        }
+      }
+      .Form-Item {
+        border-top: 1px solid #ddd;
+        padding-top: 24px;
+        padding-bottom: 24px;
+        width: 100%;
+        display: flex;
+        align-items: center;
+      }
+      @media screen and (max-width: 480px) {
+        .Form-Item {
+          padding-left: 14px;
+          padding-right: 14px;
+          padding-top: 16px;
+          padding-bottom: 16px;
+          flex-wrap: wrap;
+        }
+      }
+      .Form-Item:nth-child(5) {
+        border-bottom: 1px solid #ddd;
+      }
+      .Form-Item-Label {
+        width: 100%;
+        max-width: 248px;
+        letter-spacing: 0.05em;
+        font-weight: bold;
+        font-size: 18px;
+      }
+      @media screen and (max-width: 480px) {
+        .Form-Item-Label {
+          max-width: inherit;
+          display: flex;
+          align-items: center;
+          font-size: 15px;
+        }
+      }
+      .Form-Item-Label.isMsg {
+        margin-top: 8px;
+        margin-bottom: auto;
+      }
+      @media screen and (max-width: 480px) {
+        .Form-Item-Label.isMsg {
+          margin-top: 0;
+        }
+      }
+      .Form-Item-Label-Required {
+        border-radius: 6px;
+        margin-right: 8px;
+        padding-top: 8px;
+        padding-bottom: 8px;
+        width: 48px;
+        display: inline-block;
+        text-align: center;
+        background: #1595eb;
+        color: #fff;
+        font-size: 14px;
+      }
+      @media screen and (max-width: 480px) {
+        .Form-Item-Label-Required {
+          border-radius: 4px;
+          padding-top: 4px;
+          padding-bottom: 4px;
+          width: 32px;
+          font-size: 10px;
+        }
+      }
+      .Form-Item-Input {
+        border: 1px solid #ddd;
+        border-radius: 6px;
+        margin-left: 40px;
+        padding-left: 1em;
+        padding-right: 1em;
+        height: 48px;
+        flex: 1;
+        width: 100%;
+        max-width: 410px;
+        background: #eaedf2;
+        font-size: 18px;
+      }
+      @media screen and (max-width: 480px) {
+        .Form-Item-Input {
+          margin-left: 0;
+          margin-top: 18px;
+          height: 40px;
+          flex: inherit;
+          font-size: 15px;
+        }
+      }
+      .Form-Item-Textarea {
+        border: 1px solid #ddd;
+        border-radius: 6px;
+        margin-left: 40px;
+        padding-left: 1em;
+        padding-right: 1em;
+        height: 216px;
+        flex: 1;
+        width: 100%;
+        max-width: 410px;
+        background: #eaedf2;
+        font-size: 18px;
+      }
+      @media screen and (max-width: 480px) {
+        .Form-Item-Textarea {
+          margin-top: 18px;
+          margin-left: 0;
+          height: 200px;
+          flex: inherit;
+          font-size: 15px;
+        }
+      }
+      .Form-Btn {
+        border-radius: 6px;
+        margin-top: 32px;
+        margin-left: auto;
+        margin-right: auto;
+        padding-top: 20px;
+        padding-bottom: 20px;
+        width: 280px;
+        display: block;
+        letter-spacing: 0.05em;
+        background: #1595eb;
+        color: #fff;
+        font-weight: bold;
+        font-size: 20px;
+      }
+      @media screen and (max-width: 480px) {
+        .Form-Btn {
+          margin-top: 24px;
+          padding-top: 8px;
+          padding-bottom: 8px;
+          width: 160px;
+          font-size: 16px;
+        }
+      }
